added add todo and now working on add task
